Bug 2054038 - Avoid using RenderExternalTextureHost on ANGLE. r=gfx-reviewers,bradwerth

ANGLE does not support the required extensions APPLE_texture_range or
APPLE_client_storage. Fall back to regular RenderBufferTextureHost
instead.

Differential Revision: https://phabricator.services.mozilla.com/D311510